# cpp-test-yadro

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
src/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  body.cpp  body.hpp  club_info_analyzer.cpp  club_info_analyzer.hpp  errors.hpp  event.cpp  event.hpp  event_id.hpp  events.hpp  main.cpp  parser.hpp  reader.cpp  reader.hpp  serializer.hpp  timestamp.hpp
src/utils/: movable_il.hpp  serializer.hpp  stream_operators.hpp  string.cpp  string.hpp  timestamp.cpp  timestamp.hpp
tests/: 002.ans  003.ans  004.ans  006.ans  007.ans  008.ans  009.ans  CMakeLists.txt  analyzer.cpp  events.cpp  generator.cpp  load.cpp  string_utils.cpp
tests/data/: 001.ans  002.ans  003.ans  004.ans  007.ans  010.ans
tests/generator/: CMakeLists.txt  generator.cpp
tests/unit-tests/: CMakeLists.txt  analyzer.cpp  events.cpp  load.cpp  string_utils.cpp
